[workspace]
members = [
    "programs/smart-robo"
]
resolver = "2"

[patch.crates-io]
subtle = { version = "2.4.1", git = "https://github.com/dalek-cryptography/subtle", rev = "dc102d65df9353aced49363c34949fa73f79188a" }
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek", rev = "e0d2133c13b3f46be5da0ad4620a0bc55e30f086" }


[package]
name = "smart-robo"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.17.3"
solana-sdk = "1.17.3"

[lib]
crate-type = ["cdylib"]  # Definindo que será compilado como biblioteca dinâmica

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

