[package]
name = "smart-robo-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "smart_robo"
path = "src/lib.rs"



[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []

[dependencies]
subtle = "2.4.1"  # Versão que resolve o conflito.

# Outras dependências
solana-program = "1.17.3"
anchor-lang = "0.30.1"
curve25519-dalek = "3.2.1"
aes-gcm-siv = "0.10.3"

[patch.crates-io]
subtle = { version = "2.4.1", git = "https://github.com/dalek-cryptography/subtle", rev = "dc102d65df9353aced49363c34949fa73f79188a" }

